  (friebe)
- Implemented RFC #0181 - SystemExit
  (friebe)
- Implemented RFC #0194 - Add XPClass::getDeclared*() methods
  (friebe)
- Implemented RFC #0193 - Generics optimization
  (friebe)
- Implemented RFC #0197 - Type literals in tokens
  (friebe)
- Implemented RFC #0185 - ClassFormatException for malformed annotations
  (friebe)  

Bugfixes
~~~~~~~~
- Fixed possible fatal error in lang.ChainedException common stack trace
  elements' calculation
  (friebe)
- Fixed lang.types.String::getBytes() to throw an exception instead of
  cutting off the returned bytes at the position of an encoding error
  (friebe)
- Fixed absolute path calculation in io.Folder
  (friebe)
- Fixed URL parsing of parameters containing square brackets or dots in
  the peer.URL class by replacing parse_str() by a handcrafted parser
  (friebe, Marius Rosoiu)
- Changed img.fonts.TrueTypeFont's constructor to throw an exception if
  the font cannot be found
  (friebe)
- Fixed Runtime::memoryUsage() and Runtime::peakMemoryUsage()
  (friebe)
- Fixed generics declaration parsing in create() and is()
  (friebe)

Features
~~~~~~~~
- Added setXSLDoc(), setXMLDoc() to xml.DomXSLProcessor
  (kiesel)
- Implemented equals() method in xml.Node
  (friebe)
- Changed InputStream, OutputStream, Reader and StreamTransfer in 
  io.streams as well as their implementations to be closeable
  (friebe)
- Changed rdbms.ResultSet and all its implementations to be closeable
  (friebe)
- Implemented ARM blocks in XP language, supported by lang.Closeable 
  interface in framework.
  (friebe)
- Added text.regex.Pattern::replaceWith() method
  (friebe)
- Changed text.regex.Pattern not to throw exceptions on malformed 
  patterns like Pattern::compile(), and instead defer pattern validation 
  until actually matching the pattern - performance improvement
  (friebe)
- Made io.File::copy() and io.File::move() accept io.File and io.Folder 
  instances in addition to strings.
  (friebe)